--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,207 +1,206 @@
 * {
-    touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 html,
 body {
-    color: #fff;
-    margin: 0;
-    background-color: #000;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-weight: lighter;
+  color: #fff;
+  margin: 0;
+  background-color: #000;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: lighter;
 }
 
 table {
-    font-weight: lighter;
+  font-weight: lighter;
 }
 
 .content {
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    margin: 0;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  margin: 0;
 }
 
 #top-div {
-    background-color: #000;
+  background-color: #000;
 }
 
 #middle-div {
-    margin: 50px 20px;
-    text-align: center;
-    font-size: 24px;
+  margin: 50px 20px;
+  text-align: center;
+  font-size: 24px;
 }
 
 #bottom-div {
-    height: calc(100vh - 90px - 200px);
-    overflow-y: hidden;
-    margin-top: 2px;
+  height: calc(100vh - 90px - 200px);
+  overflow-y: hidden;
+  margin-top: 2px;
 }
 
 table {
-    width: 100%;
+  width: 100%;
 }
 
 #calc-display-x {
-    height: 90px;
-    font-size: 50px;
-    font-weight: lighter;
-    text-align: center;
-    vertical-align: middle;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 90px;
+  font-size: 50px;
+  font-weight: lighter;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #calc-display-x.empty:after {
-    content: "";
-    width: 1px;
-    height: 40px;
-    background: #fff;
-    display: inline-block;
-    animation: 1.5s blink step-end infinite;
+  content: "";
+  width: 1px;
+  height: 40px;
+  background: #fff;
+  display: inline-block;
+  animation: 1.5s blink step-end infinite;
 }
 
 @keyframes blink {
+  from,
+  to {
+    opacity: 0;
+  }
 
-    from,
-    to {
-        opacity: 0;
-    }
-
-    50% {
-        opacity: .75;
-    }
+  50% {
+    opacity: 0.75;
+  }
 }
 
 .tip-percent {
-    /* border: 1px solid #fff; */
-    color: #000;
-    border-radius: 6px;
-    padding: 3px 10px 3px 0px;
-    margin: 8px;
-    font-weight: bold;
+  /* border: 1px solid #fff; */
+  color: #000;
+  border-radius: 6px;
+  padding: 3px 10px 3px 0px;
+  margin: 8px;
+  font-weight: bold;
 }
 
 .results-table {
-    margin: 0;
-    overflow-y: hidden;
+  margin: 0;
+  overflow-y: hidden;
 }
 
 .calc-table {
-    margin: 0 auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: #1d1d1d;
-    border: 1px solid #000;
+  margin: 0 auto;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #1d1d1d;
+  border: 1px solid #000;
 }
 
 .calc-table div {
-    font-size: 30px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
+  font-size: 30px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
 }
 
 .calc-table div:active {
-    background-color: #000;
+  background-color: #000;
 }
 
-.calc-results-header>th {
-    background-color: #333;
-    font-size: 14px;
-    width: 33.33%;
-    height: 30px;
-    font-weight: lighter;
+.calc-results-header > th {
+  background-color: #333;
+  font-size: 14px;
+  width: 33.33%;
+  height: 30px;
+  font-weight: lighter;
 }
 
 .calc-results-scroll {
-    height: 100%;
-    overflow-y: scroll;
+  height: 100%;
+  overflow-y: scroll;
 }
 
-#calc-results-footer>tr>td {
-    width: 33.33%;
-    background-color: #1d1d1d;
-    font-size: 24px;
-    text-align: right;
-    padding-right: 16px;
+#calc-results-footer > tr > td {
+  width: 33.33%;
+  background-color: #1d1d1d;
+  font-size: 24px;
+  text-align: right;
+  padding-right: 16px;
 }
 
-#calc-results-footer>tr>td:first-child {
-    padding-right: 0;
+#calc-results-footer > tr > td:first-child {
+  padding-right: 0;
 }
 
-.results-table-scroll>tfoot>td {
-    background-color: #000;
+.results-table-scroll > tfoot > td {
+  background-color: #000;
 }
 
 #tipFullScreenWrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  display: none;
 }
 
 #tipFullScreenContainer {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    font-size: 70px;
-    font-weight: bold;
-    white-space: nowrap;
-    flex-direction: column;
-    margin-left: 40px;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  font-size: 70px;
+  font-weight: bold;
+  white-space: nowrap;
+  flex-direction: column;
+  margin-left: 40px;
 }
 
 #tipFullScreenContainer div {
-    margin: 0 30px 0 0;
-    position: relative;
-    line-height: 130px;
-    text-align: left;
-
+  margin: 0 30px 0 0;
+  position: relative;
+  line-height: 130px;
+  text-align: left;
 }
 
 #tipFullScreenContainer div span {
-    position: absolute;
-    top: -50px;
-    left: 0;
-    font-size: 22px;
-    font-weight: 100;
-    color: rgb(204, 204, 204);
+  position: absolute;
+  top: -50px;
+  left: 0;
+  font-size: 22px;
+  font-weight: 100;
+  color: rgb(204, 204, 204);
 }
 
 #clear-img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    height: 30px;
-    padding: 25px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  padding: 25px;
 }
 
 .dollar {
-    color: rgb(204, 204, 204);
-    font-size: 70%;
-    font-weight: 100;
+  color: rgb(204, 204, 204);
+  font-size: 70%;
+  font-weight: 100;
 }
 
 i,
 em {
-    font-style: normal;
+  font-style: normal;
 }
 
 .back {
-    background-image: url("../../assets/img/delete-left-solid-30x20.png");
-    background-position: center;
-    background-repeat: no-repeat;
+  background-image: url("../../assets/img/delete-left-solid-30x20.png");
+  background-position: center;
+  background-repeat: no-repeat;
 }
