--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,19 @@ body {
   font-weight: lighter;
 }
 
+h1 {
+  font-size: 40px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
 table {
   font-weight: lighter;
 }
@@ -30,12 +43,22 @@ table {
 }
 
 #middle-div {
-  margin: 50px 20px;
+  margin: 50px 30px;
   text-align: center;
   font-size: 24px;
 }
+
 #middle-div div {
-  margin-top: 60px;
+  margin-top: 20px;
+}
+
+#middle-div .small {
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+#middle-div .rev {
+  margin-top: 30px;
   font-size: 10px;
   color: rgba(255, 255, 255, 0.3);
 }
@@ -208,4 +231,83 @@ em {
   background-image: url("../../assets/img/delete-left-solid-30x20.png");
   background-position: center;
   background-repeat: no-repeat;
+}
+
+/* -------- */
+
+.gallery {
+  position: relative;
+  max-width: 800px;
+  padding: 0 10px;
+}
+
+.gallery_scroller {
+  /* snap mandatory on horizontal axis  */
+  scroll-snap-type: x mandatory;
+
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  display: flex;
+  align-items: center;
+
+  height: 200px;
+
+  /* Enable Safari touch scrolling physics which is needed for scroll snap */
+  -webkit-overflow-scrolling: touch;
+}
+
+.gallery_scroller div {
+  /* snap align center  */
+  scroll-snap-align: center;
+  margin: 10px;
+  position: relative;
+}
+
+.gallery_scroller img {
+  border-radius: 10px;
+}
+
+.gallery_scroller div.card {
+  min-width: 75%;
+  min-height: 95%;
+  border-radius: 10px;
+  border: 0px solid red;
+  font-size: 20px;
+  box-sizing: border-box;
+  padding: 5px;
+  display: flex;
+  text-align: left;
+}
+
+.gallery_scroller div.card span {
+  font-size: 150%;
+  margin-right: 15px;
+}
+
+.gallery .btn {
+  position: absolute;
+
+  top: 50%;
+  transform: translateY(-50%);
+
+  height: 30px;
+  width: 30px;
+
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+
+  z-index: 1;
+}
+
+.gallery .btn.next {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  right: -20px;
+}
+
+.gallery .btn.prev {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  left: -20px;
 }
