--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   font-size: 40px;
+  margin: 20px;
 }
 
 a {
@@ -43,13 +44,13 @@ table {
 }
 
 #middle-div {
-  margin: 50px 30px;
+  margin: 0 30px;
   text-align: center;
   font-size: 24px;
 }
 
 #middle-div div {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 #middle-div .small {
@@ -251,7 +252,7 @@ em {
   display: flex;
   align-items: center;
 
-  height: 200px;
+  height: 120px;
 
   /* Enable Safari touch scrolling physics which is needed for scroll snap */
   -webkit-overflow-scrolling: touch;
@@ -269,11 +270,11 @@ em {
 }
 
 .gallery_scroller div.card {
-  min-width: 75%;
+  min-width: 85%;
   min-height: 95%;
   border-radius: 10px;
   border: 0px solid red;
-  font-size: 20px;
+  font-size: 16px;
   box-sizing: border-box;
   padding: 5px;
   display: flex;
@@ -281,7 +282,7 @@ em {
 }
 
 .gallery_scroller div.card span {
-  font-size: 150%;
+  font-size: 200%;
   margin-right: 15px;
 }
 
