--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -229,7 +229,7 @@ em {
 }
 
 .back {
-  background-image: url("../../assets/img/delete-left-solid-30x20.png");
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="29" height="20" viewBox="0 0 29 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 10 8.5 0h20v20h-20L0 10Zm16.828-.672L13.5 6l1.414-1.414 3.329 3.328 3.328-3.328L22.985 6l-3.328 3.328 3.742 3.743-1.414 1.414-3.742-3.742-3.743 3.742-1.414-1.414 3.742-3.743Z" fill="%23a7a7a7"/></svg>');
   background-position: center;
   background-repeat: no-repeat;
 }
