Fix revision margin

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -64,7 +64,7 @@ table {
 }
 
 #middle-div .rev {
-  margin: 0;
+  margin: 10px 0 40px 0;
   font-size: 10px;
   color: rgba(255, 255, 255, 0.45);
 }
