--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -15,11 +15,13 @@ body {
 h1 {
   font-size: 40px;
   margin: 20px;
+  font-weight: bold;
 }
 
 h2 {
   font-size: 24px;
   margin: 20px;
+  font-weight: 300;
 }
 
 a {
@@ -67,6 +69,27 @@ table {
   margin: 10px 0 40px 0;
   font-size: 10px;
   color: rgba(255, 255, 255, 0.45);
+}
+
+#middle-div-tell-me-more {
+  background: #333333;
+  font-size: 20px;
+  margin: 20px auto 10px;
+  width: 160px;
+  border-radius: 10px;
+  padding: 5px;
+  font-size: 16px;
+}
+
+#middle-div-more-wrapper {
+  max-height: 0;
+  transition: max-height 0.15s ease-out;
+  overflow: hidden;
+}
+
+#middle-div-more-wrapper.open {
+  max-height: 800px;
+  transition: max-height 0.25s ease-in;
 }
 
 #bottom-div {
@@ -241,45 +264,10 @@ em {
 
 /* -------- */
 
-.gallery {
-  position: relative;
-}
-
-.gallery_scroller {
-  /* snap mandatory on horizontal axis  */
-  scroll-snap-type: x mandatory;
-
-  overflow-x: scroll;
-  overflow-y: hidden;
-
-  display: flex;
-  align-items: center;
-
-  height: 120px;
-
-  /* Enable Safari touch scrolling physics which is needed for scroll snap */
-  -webkit-overflow-scrolling: touch;
-}
-
-.gallery_scroller div {
-  /* snap align center  */
-  scroll-snap-align: center;
-  margin: 10px;
-  position: relative;
-}
-
-.gallery_scroller img {
-  border-radius: 10px;
-}
-
 .gallery_scroller div.card {
-  min-width: 100%;
-  min-height: 95%;
-  border-radius: 10px;
-  border: 0px solid red;
   font-size: 18px;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 20px 0 0;
   display: flex;
   text-align: left;
 }
@@ -287,32 +275,4 @@ em {
 .gallery_scroller div.card span {
   font-size: 200%;
   margin-right: 15px;
-}
-
-.gallery .btn {
-  display: none;
-  position: absolute;
-
-  top: 50%;
-  transform: translateY(-50%);
-
-  height: 30px;
-  width: 30px;
-
-  border-radius: 2px;
-  background-color: rgba(0, 0, 0, 0.5);
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-
-  z-index: 1;
-}
-
-.gallery .btn.next {
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>');
-  right: -20px;
-}
-
-.gallery .btn.prev {
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>');
-  left: -20px;
 }
