--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -238,6 +238,11 @@ table {
   font-weight: 100;
   color: rgb(204, 204, 204);
 }
+#tipFullScreenContainer div span span {
+  position: relative;
+  top: 0;
+  left: 10px;
+}
 
 #clear-img {
   position: absolute;
