add copy capability for tip and amount

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -242,6 +242,9 @@ table {
   position: relative;
   top: 0;
   left: 10px;
+  font-weight: normal;
+  opacity: 0.9;
+  font-size: 90%;
 }
 
 #clear-img {
