--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -117,6 +117,18 @@ table {
   justify-content: center;
 }
 
+#calc-display-error {
+  height: 10px;
+  font-size: 12px;
+  font-weight: lighter;
+  text-align: center;
+  position: absolute;
+  top: 70px;
+  display: none;
+  margin: 0 auto;
+  width: 100%;
+}
+
 #calc-display-x.empty:after {
   content: "";
   width: 1px;
@@ -181,9 +193,14 @@ table {
   font-weight: lighter;
 }
 
-.calc-results-scroll {
+#calc-results-scroll {
   height: 100%;
   overflow-y: scroll;
+}
+
+#calc-results-scroll > div {
+  margin: 30px 75px;
+  text-align: center;
 }
 
 #calc-results-footer > tr > td {
@@ -324,5 +341,27 @@ em {
     grid-template-columns: 1fr 1fr;
     width: 500px;
     height: 300px;
+  }
+}
+
+.shake {
+  animation: horizontal-shaking 0.25s infinite;
+}
+
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(5px);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
