--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -117,6 +117,15 @@ table {
   justify-content: center;
 }
 
+#calc-display-x:before {
+  content: "$";
+  font-weight: 100;
+  font-size: 80%;
+  position: relative;
+  top: 3px;
+  color: #929292;
+}
+
 #calc-display-error {
   height: 10px;
   font-size: 12px;
