--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -37,6 +37,10 @@ table {
   font-weight: lighter;
 }
 
+svg {
+  filter: drop-shadow(2px 2px 20px rgba(255, 255, 255, 0.5));
+}
+
 .content {
   width: 100%;
   max-width: 100%;
