--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -127,7 +127,7 @@ table {
   font-size: 80%;
   position: relative;
   top: 3px;
-  color: #929292;
+  color: rgb(204, 204, 204);
 }
 
 #calc-display-error {
@@ -244,13 +244,13 @@ table {
 
 #tipFullScreenContainer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   font-size: 70px;
   font-weight: bold;
   white-space: nowrap;
   flex-direction: column;
-  margin-left: 40px;
+  margin: 100px 40px 0 40px;
 }
 
 #tipFullScreenContainer div {
@@ -258,6 +258,10 @@ table {
   position: relative;
   line-height: 130px;
   text-align: left;
+}
+
+#tipFullScreenContainer.compact div {
+  line-height: 120px;
 }
 
 #tipFullScreenContainer div span {
@@ -268,6 +272,7 @@ table {
   font-weight: 100;
   color: rgb(204, 204, 204);
 }
+
 #tipFullScreenContainer div span span {
   position: relative;
   top: 0;
@@ -275,6 +280,17 @@ table {
   font-weight: normal;
   opacity: 0.9;
   font-size: 90%;
+}
+
+#tipFullScreenContainer div.cash {
+  line-height: 100px;
+  font-size: 46px;
+  color: rgb(204, 204, 204);
+}
+
+#tipFullScreenContainer div.cash span {
+  font-size: 18px;
+  top: -36px;
 }
 
 #clear-img {
