--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -239,18 +239,30 @@ table {
   right: 0;
   bottom: -400px;
   background-color: black;
+  transform: scale(0.2);
+  transition-property: transform, opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+  opacity: 0.5;
   display: none;
+}
+
+#tipFullScreenWrapper.in {
+  bottom: -400px;
+  display: block;
+  transform: scale(1);
+  opacity: 1;
 }
 
 #tipFullScreenContainer {
   display: flex;
   justify-content: flex-start;
   height: 100vh;
-  font-size: 70px;
+  font-size: 60px;
   font-weight: bold;
   white-space: nowrap;
   flex-direction: column;
-  margin: 100px 40px 0 40px;
+  margin: 60px 40px 0 40px;
 }
 
 #tipFullScreenContainer div {
@@ -261,7 +273,7 @@ table {
 }
 
 #tipFullScreenContainer.compact div {
-  line-height: 120px;
+  line-height: 110px;
 }
 
 #tipFullScreenContainer div span {
@@ -395,6 +407,6 @@ em {
   }
 
   #tipFullScreenContainer.compact div {
-    line-height: 100px;
+    line-height: 90px;
   }
 }
