--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -34,11 +34,17 @@ a:visited {
 }
 
 table {
+  width: 100%;
   font-weight: lighter;
 }
 
+i,
+em {
+  font-style: normal;
+}
+
 svg {
-  filter: drop-shadow(-2px 2px 10px rgba(255, 255, 255, 0.3));
+  filter: drop-shadow(-2px 2px 10px rgba(255 255 255 / 30%));
 }
 
 .content {
@@ -64,7 +70,7 @@ svg {
 
 #middle-div .small {
   font-size: 20px;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255 255 255 / 90%);
 }
 
 #middle-div .qr {
@@ -72,19 +78,18 @@ svg {
 }
 
 #middle-div .rev {
-  margin: 10px 0 40px 0;
+  margin: 10px 0 40px;
   font-size: 10px;
-  color: rgba(255, 255, 255, 0.45);
+  color: rgba(255 255 255 / 45%);
 }
 
 #middle-div-tell-me-more {
-  background: #333333;
+  background: #333;
   font-size: 20px;
   margin: 20px auto 10px;
   width: 160px;
   border-radius: 10px;
   padding: 5px;
-  font-size: 16px;
 }
 
 #middle-div-more-wrapper {
@@ -105,10 +110,6 @@ svg {
   cursor: pointer;
 }
 
-table {
-  width: 100%;
-}
-
 #calc-display-x {
   height: 90px;
   font-size: 50px;
@@ -121,13 +122,13 @@ table {
   justify-content: center;
 }
 
-#calc-display-x:before {
+#calc-display-x::before {
   content: "$";
   font-weight: 100;
   font-size: 80%;
   position: relative;
   top: 3px;
-  color: rgb(204, 204, 204);
+  color: rgb(204 204 204);
 }
 
 #calc-display-error {
@@ -142,7 +143,7 @@ table {
   width: 100%;
 }
 
-#calc-display-x.empty:after {
+#calc-display-x.empty::after {
   content: "";
   width: 1px;
   height: 40px;
@@ -152,8 +153,8 @@ table {
 }
 
 @keyframes blink {
-  from,
-  to {
+  0%,
+  100% {
     opacity: 0;
   }
 
@@ -166,7 +167,7 @@ table {
   /* border: 1px solid #fff; */
   color: #000;
   border-radius: 6px;
-  padding: 3px 10px 3px 0px;
+  padding: 3px 10px 3px 0;
   margin: 8px;
   font-weight: bold;
 }
@@ -216,6 +217,10 @@ table {
   text-align: center;
 }
 
+.results-table-scroll > tfoot > td {
+  background-color: #000;
+}
+
 #calc-results-footer > tr > td {
   width: 33.33%;
   background-color: #1d1d1d;
@@ -228,11 +233,7 @@ table {
   padding-right: 0;
 }
 
-.results-table-scroll > tfoot > td {
-  background-color: #000;
-}
-
-#tipFullScreenWrapper {
+#tip-full-screen-wrapper {
   position: absolute;
   top: 0;
   left: 0;
@@ -247,14 +248,14 @@ table {
   display: none;
 }
 
-#tipFullScreenWrapper.in {
+#tip-full-screen-wrapper.in {
   bottom: -400px;
   display: block;
   transform: scale(1);
   opacity: 1;
 }
 
-#tipFullScreenContainer {
+#tip-full-screen-container {
   display: flex;
   justify-content: flex-start;
   height: 100vh;
@@ -262,30 +263,30 @@ table {
   font-weight: bold;
   white-space: nowrap;
   flex-direction: column;
-  margin: 60px 40px 0 40px;
+  margin: 60px 40px 0;
 }
 
-#tipFullScreenContainer div {
+#tip-full-screen-container div {
   margin: 0 30px 0 0;
   position: relative;
   line-height: 130px;
   text-align: left;
 }
 
-#tipFullScreenContainer.compact div {
+#tip-full-screen-container.compact div {
   line-height: 110px;
 }
 
-#tipFullScreenContainer div span {
+#tip-full-screen-container div span {
   position: absolute;
   top: -50px;
   left: 0;
   font-size: 22px;
   font-weight: 100;
-  color: rgb(204, 204, 204);
+  color: rgb(204 204 204);
 }
 
-#tipFullScreenContainer div span span {
+#tip-full-screen-container div span span {
   position: relative;
   top: 0;
   left: 10px;
@@ -294,13 +295,13 @@ table {
   font-size: 90%;
 }
 
-#tipFullScreenContainer div.cash {
+#tip-full-screen-container div.cash {
   line-height: 100px;
   font-size: 46px;
-  color: rgb(204, 204, 204);
+  color: rgb(204 204 204);
 }
 
-#tipFullScreenContainer div.cash span {
+#tip-full-screen-container div.cash span {
   font-size: 18px;
   top: -36px;
 }
@@ -315,14 +316,9 @@ table {
 }
 
 .dollar {
-  color: rgb(204, 204, 204);
+  color: rgb(204 204 204);
   font-size: 70%;
   font-weight: 100;
-}
-
-i,
-em {
-  font-style: normal;
 }
 
 .back {
@@ -334,7 +330,7 @@ em {
 
 /* -------- */
 
-.gallery_scroller div.card {
+.gallery-scroller div {
   font-size: 18px;
   box-sizing: border-box;
   padding: 20px 0 0;
@@ -342,7 +338,7 @@ em {
   text-align: left;
 }
 
-.gallery_scroller div.card span {
+.gallery-scroller div span {
   font-size: 200%;
   margin-right: 15px;
 }
@@ -355,15 +351,19 @@ em {
   0% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(5px);
   }
+
   50% {
     transform: translateX(-5px);
   }
+
   75% {
     transform: translateX(5px);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -398,7 +398,7 @@ em {
     float: right;
   }
 
-  #tipFullScreenContainer {
+  #tip-full-screen-container {
     margin: calc((100vh - 300px) / 2) auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -406,7 +406,7 @@ em {
     height: 300px;
   }
 
-  #tipFullScreenContainer.compact div {
+  #tip-full-screen-container.compact div {
     line-height: 90px;
   }
 }
