--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -229,6 +229,12 @@ svg {
   padding-right: 16px;
 }
 
+#calc-results-footer > tr > td:nth-last-child(-n + 2)::first-letter {
+  color: rgb(204 204 204);
+  font-size: 90%;
+  font-weight: 100;
+}
+
 #calc-results-footer > tr > td:first-child {
   padding-right: 0;
 }
